Breaking changes (from main code base):
- Miner files are not backwards compatible
- Pool files are not backwards compatible
- PowerShell 7.x is required, older PowerShell versions are no longer supported
- Balances & Earnings files from versions older than 3.9.9.18 are no longer compatible


Changelog NemosMiner 3.9.9.26 14.03.2021
========================================

Improvement:
- MiningPoolHub: Read default payout threshold from pool API data; Custom payout threshold can be set in \Config\PoolsConfig.Json
- WebGUI / Config editor: Add config item $WaitForMinerData ('Seconds until first valid data sample')
- ZergPool: Read default payout threshold from pool API data; Custom payout threshold can be set in \Config\PoolsConfig.Json

Miner updates:
- Trex-v0.19.12


Changelog NemosMiner 3.9.9.25 14.03.2021
========================================

Improvement:
- Optimize hashrate & powerusage collection code
- WebGUI / Unavailable miners & pools: Add button to remove watchdog timer
- WebGUI / balances: Use local culture for currency formatting

Fixed:
- Core: Slowdown over time in Write-Message()
- Donation address randomisation not working (regression from 3.9.9.23)
- NLPool not working (regression from 3.9.9.23)
- NSFMiner failed mining @ ZergPool

Miner updates:
- GMiner-v2.47
- NanoMiner-v3.3.1
- SRBMinerMulti-v0.7.0


Changelog NemosMiner 3.9.9.24 06.03.2021
========================================

Fixed:
- Pool balances in BTC not showing if default payout currency is not set to BTC 
- CcminerKlausT-v8.25: Fix waiting for first data sample
- Text windows: Balances in local currency 1000x too low
- WebGUI / Balances: mBTC total value was inflated
- Miners: WaitForMinerData not working in certain scenarios
- MiniZ-v1.7x4: Fix mining @ ProHashing

Improvement:
- Memory optimization

Miner updates:
- GMiner-v2.46
- NSFMiner-v1.3.8
- SRBMinerMulti-v0.6.9

Changelog NemosMiner 3.9.9.23 01.03.2021
========================================

Changed: