@@ -8,6 +8,10 @@ Breaking changes (from main code base):
 Changelog NemosMiner 3.9.9.26 14.03.2021
 ========================================
 
+Fixed:
+- Logfile rollover
+- WebGUI / Config editor: 'Load default algorithm' button not working
+
 Improvement:
 - MiningPoolHub: Read default payout threshold from pool API data; Custom payout threshold can be set in \Config\PoolsConfig.Json
 - WebGUI / Config editor: Add config item $WaitForMinerData ('Seconds until first valid data sample')
